<resources>
    <string name="app_name">Set7HeeChinTongRSD2G3</string>
    <string name="textViewTittle">mobile income tax calculator for taxpayers</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="underage">you are underage</string>
    <string name="incomeTax">Tax(Income)(RM)</string>
    <string name="year">Year</string>
    <string name="_2015">2015</string>
    <string name="_2016">2016</string>
    <string name="calculate">Calculate</string>
    <string name="call_phone">Call phone</string>
    <string name="hasil_gov">hasil.gov</string>
    <string name="reset">Reset</string>
    <string name="notax">No tax needed to pay</string>
    <string-array name="age">
        <item> below 26 years old</item>
        <item> 26 and above</item>
    </string-array>

    <string name="noname">Please fill in your name </string>
    <string name="result">Result</string>
    <string name="resultShow">Result will show here</string>
    <string name="Showresult">
        Tax %% for year 2015 at %d%%\n
        Tax %% for year 2016 at %d%%\n
        Total amount income tax in year 2015 is RM%.2f\n
        Total amount for income tax in year 2016 is RM%.2f\n
    </string>
    <string name="rm">RM</string>
    <string name="resultMessage">This is your tax, %s.\n</string>
</resources>